Using async bash parser

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@ein/bash-parser": "npm:@jsr/ein__bash-parser@^0.9.3",
     "@tauri-apps/api": ">=2.0.0",
     "@tauri-apps/plugin-shell": ">=2.0.0",
-    "bash-parser": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0"
